# nvim-config

./: .editorconfig  .gitignore  .luarc.json  .markdownlint.yaml  100_note.md  diffed.lua.bak  filetype.lua  init.lua  lazy-lock.json  new_devicon_scratch.lua  notes.md  pyproject.toml  stylua.toml
after/ftplugin/: help.lua  json.lua  lua.lua  markdown.lua  mermaid.lua  python.lua  qf.lua
after/plugin/: python-cc.lua.bak  smartcolumn.lua.bak  weather.lua
ftplugin/: awk.vim  julia.lua.bak  lua.lua  markdown.lua  norg.lua  python.lua  quarto.lua
lua/: ffi.lua  kitty.lua.bak
lua/eo/: globals.lua  highlights.lua  options.lua  servers.lua  strings.lua  ui.lua
lua/eo/plugs/: colorschemes.lua  completion.lua  db.lua  editing.lua  git.lua  images.lua  init.lua  lazydev.lua  lsp.lua  lspbak.lua.bak  md_notes.lua  navigate.lua  neorg.lua  noice.lua  overseer.lua  picker.lua  pythonsyall.lua  quarto.lua  repl.lua  search.lua  snippets.lua  sniprun.lua  statusline.lua  terminal.lua  tests.lua  tools.lua  treesit.lua  ui.lua  whichkey.lua
luasnippets/: help.lua  lua.lua.bak
plugin/: autocommands.lua  colors.lua  env.lua  foldtext.lua.bak  lastplace.lua.bak  lsp.lua  mappings.lua  numbers.lua.bak  rooter.lua.bak  statuscolumn.lua  statusline.lua.bak  whitespace.lua.bak
queries/lua/: injections.scm
queries/markdown/: highlights.scm  textobjects.scm
snips/: package.json
snips/snippets/: quarto.json  tex.json
test/: best_est.jl  best_est.md  best_est.norg  best_est.py  best_test.html  best_test.qmd  capture.py  sieve.py  test_jl.jl  univariate_normal.py
(+2 files in other folders)
