[project]
requires-python = ">=3.12"

# [tool.poetry]
# python = "^3.12"                          # "^3.12"
# build = "poetry build"
# files = ["pyproject.toml", "poetry.lock"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# extend = "../ruff.toml"
line-length = 80
# target-version = ['py311', 'py312']
extend-include = ["*.ipynb"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
fixable = ["ALL"]
unfixable = []
# select = ["E4", "E7", "E9", "F", "W"]
# ignore = ["E501", "E2", "E5", "F4", "W"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-select = ["UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
# trailing-comma = true

[tool.black]
line-length = 80
# target-version = ['py312']

[tool.mdformat]
number = true

[tool.basedpyright]
# exclude = ["**/node_modules", "**/__pycache__", "**/rplugin"]
# ignore = ["rplugin/**"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
